rke2/authentik/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  namespace: authentik
spec:
  parentRefs:
    - name: hwcopeland-gateway
      namespace: kube-system
      sectionName: https
  hostnames:
    - "auth.hwcopeland.net"
  rules:
    - backendRefs:
        - name: authentik-server
          port: 80
